Fixes for mobile-nav meny and action-title on mobile.

--- a/style.css
+++ b/style.css
@@ -563,7 +563,8 @@ footer > div > ul > li > a {
         width: 100%;
         max-width: 200px;
         padding: 12px 16px;
-        margin: 0 auto 16px;
+        margin-left: 5rem;
+        margin-bottom: 16px;
         background-color: #4040C5;
         color: #fff;
         text-decoration: none;
@@ -588,6 +589,10 @@ footer > div > ul > li > a {
 
     .t-card {
         width: 85vw;
+    }
+
+    .action-title {
+        margin-top: 1.8rem;
     }
 
     footer {
